Fixed Visibility of AtomApplication

--- a/src/Core/AtomApplication.css
+++ b/src/Core/AtomApplication.css
@@ -1,7 +1,6 @@
 ﻿.atom-application{
     margin-left:auto;
     margin-right:auto;
-    visibility:hidden;
 }
 
 .atom-dock-application{
